--- a/index.html
+++ b/index.html
@@ -1,60 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <link rel="stylesheet" type="text/css" href="style.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
-  <style>
-
-  ul.sidenav {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    width: 25%;
-    background-color: #555;
-    position: fixed;
-    height: 100%;
-  }
-
-  ul.sidenav li a {
-    display: flex;
-    color: white;
-    padding: 8px 16px;
-    text-decoration: none;
-  }
-
-  ul.sidenav li a.active {
-    background-color: #4CAF50;
-  }
-
-  ul.sidenav li a:hover:not(.active) {
-    background-color: #B6DEB7;
-  }
-
-  @media screen and (max-width: 900px) {
-    ul.sidenav {
-      display: inline-flex;
-      width: 100%;
-      height: auto;
-      flex-direction: row;
-    }
-    ul.sidenav li a {
-      padding: 15px;
-    }
-  }
-
-  @media screen and (max-width: 600px) {
-    ul.sidenav {
-      width: 100%
-      display: inline;
-      height: auto;
-      flex-direction: column;
-    }
-
-    ul.sidenav li a {
-      padding: 15px;
-    }
-  }
-
-</style>
 </head>
 <body>
 
