--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
   
 <body>
-  <ul class="sidenav">
+  <ul class="nav">
     <li><a class="active" href="#home"><span><i class="fas fa-home"></i>  Home</span></a></li>
     <li><a href="#search"><span><i class="fas fa-search"></i>  Search</span></a></li>
     <li><a href="#contact"><span><i class="fas fa-envelope"></i>  Contact</span></a></li>
